--- a/test/textism.yml
+++ b/test/textism.yml
@@ -2,17 +2,17 @@
 name: header one
 in: h1. Header 1
 html: <h1>Header 1</h1>
-latex: \section*{Header 1}
+latex: "\section*{Header 1}\n\n"
 ---
 name: header two
 in: h2. Header 2
 html: <h2>Header 2</h2>
-latex: \subsection*{Header 2}
+latex: "\subsection*{Header 2}\n\n"
 ---
 name: header three
 in: h3. Header 3
 html: <h3>Header 3</h3>
-latex: \subsubsection*{Header 3}
+latex: "\subsubsection*{Header 3}\n\n"
 ---
 name: blockquote
 in: |-
