--- a/test/code.yml
+++ b/test/code.yml
@@ -30,16 +30,18 @@ in: |-
   This is a regular paragraph.  AT&T. &pound;38 > $38.
 html: |-
   <p>This is a regular paragraph.  AT&amp;T. &pound;38 &gt; $38.</p>
+latex: "This is a regular paragraph.  AT\\&T. \\pounds{}38 \\textgreater{} \\$38.\n\n"
 ---
 name: preservation of existing entities
-in: "Math fact: 3 &lt; 5 &amp; 5 &gt; 3 but &pound;6 &#62; $6.
-"
-html: "<p>Math fact: 3 &lt; 5 &amp; 5 &gt; 3 but &pound;6 &#62; $6.</p>"
+in: "Math fact: 3 &lt; 5 &amp; 5 &gt; 3 but &pound;6 &#62; $6. Oh, and 2 &divide; 4 is &frac12;."
+html: "<p>Math fact: 3 &lt; 5 &amp; 5 &gt; 3 but &pound;6 &#62; $6. Oh, and 2 &divide; 4 is &frac12;.</p>"
+latex: "Math fact: 3 \\textless{} 5 \\& 5 \\textgreater{} 3 but \\pounds{}6 \\textgreater{} \\$6. Oh, and 2 \\textdiv{} 4 is \\sfrac{1}{2}.\n\n"
 ---
 name: escaping of existing entities in blockcode
 in: "bc. Math fact: 3 &lt; 5 &amp; 5 &gt; 3 but &pound;5 &#62; $5.
 "
 html: "<pre><code>Math fact: 3 &amp;lt; 5 &amp;amp; 5 &amp;gt; 3 but &amp;pound;5 &amp;#62; $5.</code></pre>"
+latex: "\\begin{verbatim}\n\\begin{verbatim}Math fact: 3 \\&lt; 5 \\&amp; 5 \\&gt; 3 but \\&pound;5 \\&\\#62; \\$5. \\\\\\end{verbatim}\\end{verbatim}\n"
 ---
 name: no formatting within pre
 in: |-
@@ -134,3 +136,19 @@ html: |-
   <pre><code>This is an extended bc.</code>
   
   <code>I saw a ship. It ate my elephant.</code></pre>
+---
+name: escape latex standard symbols 
+in: "standard symbols # $ % & _ { }" 
+latex: "standard symbols \\# \\$ \\% \\& \\_ \\{ \\}\n\n" 
+--- 
+name: escape latex text symbols 
+in: "text symbols \\ ~ ^" 
+latex: "text symbols \\textbackslash{} \\~{} \\^{}\n\n" 
+--- 
+name: named html entities to latex 
+in: "&hellip; &frac12;" 
+latex: "\ldots{} \sfrac{1}{2}\n\n" 
+--- 
+name: numeric html entities to latex 
+in: "&#8230; &#189;" 
+latex: "\ldots{} \sfrac{1}{2}\n\n"
