--- a/test/sanitize_html.yml
+++ b/test/sanitize_html.yml
@@ -20,6 +20,12 @@ in: |-
 sanitized_html: |-
   The bad tags should be <b>missing</b>: alert("Hai. I`m in ya PC. Makin ya XSS viruzz! KThxBye");
 ---
+name: sanitize_html processes text in inline notextile tags
+in: |-
+  The bad tags should be <b>missing</b>: <notextile><script type="text/javascript">alert("Hai. I`m in ya PC. Makin ya XSS viruzz! KThxBye");</script></notextile>
+sanitized_html: |-
+  <p>The bad tags should be <b>missing</b>: alert("Hai. I`m in ya PC. Makin ya XSS viruzz! KThxBye");</p>
+---
 name: sanitize_html removes script tags
 in: |-
   <script type="text/javascript">
