Refactor sanitize_html to sanitize it coming in so there are no loopholes.
sanitize_html causing all disallowed tags to be stripped prior to parsing is a safer approach than detecting HTML tags, even within notextile and ignore blocks, and sanitizing them then.

--- a/test/sanitize_html.yml
+++ b/test/sanitize_html.yml
@@ -8,11 +8,11 @@ sanitized_html: <p>Here&#8217;s a bad image <img /></p>
 in: Just some random > and < characters, but also a <br/> tag.
 sanitized_html: <p>Just some random &gt; and &lt; characters, but also a <br/> tag.</p>
 ---
-name: sanitize_html processes text beginning with space
+name: processes text beginning with space
 in: ' This began with a space and ends with some XSS: <script type="text/javascript">alert("Hai. I`m in ya PC. Makin ya XSS viruzz! KThxBye");</script>'
-sanitized_html: 'This began with a space and ends with some <span class="caps">XSS</span>: alert("Hai. I`m in ya PC. Makin ya XSS viruzz! KThxBye");'
+sanitized_html: 'This began with a space and ends with some <span class="caps">XSS</span>: alert(&#8220;Hai. I`m in ya PC. Makin ya <span class="caps">XSS</span> viruzz! KThxBye&#8221;);'
 ---
-name: sanitize_html processes text in notextile tags
+name: processes text in notextile tags
 in: |-
   <notextile>
   The bad tags should be <b>missing</b>: <script type="text/javascript">alert("Hai. I`m in ya PC. Makin ya XSS viruzz! KThxBye");</script>
@@ -20,15 +20,23 @@ in: |-
 sanitized_html: |-
   The bad tags should be <b>missing</b>: alert("Hai. I`m in ya PC. Makin ya XSS viruzz! KThxBye");
 ---
-name: sanitize_html processes text in inline notextile tags
+name: processes text in inline notextile tags
 in: |-
   The bad tags should be <b>missing</b>: <notextile><script type="text/javascript">alert("Hai. I`m in ya PC. Makin ya XSS viruzz! KThxBye");</script></notextile>
 sanitized_html: |-
   <p>The bad tags should be <b>missing</b>: alert("Hai. I`m in ya PC. Makin ya XSS viruzz! KThxBye");</p>
 ---
-name: sanitize_html removes script tags
+name: removes script tags
 in: |-
   <script type="text/javascript">
-    alert('Hai. I`m in ya PC. Makin ya XSS viruzz! KThxBye');
+    alert("Hai. I`m in ya PC. Makin ya XSS viruzz! KThxBye");
   </script>
-sanitized_html: "\n  alert('Hai. I`m in ya PC. Makin ya XSS viruzz! KThxBye');"
+sanitized_html: "alert(&#8220;Hai. I`m in ya PC. Makin ya <span class=\"caps\">XSS</span> viruzz! KThxBye&#8221;);"
+---
+name: removes nested script tags
+in: |-
+  <script type="text/javascript"><script>
+    alert("Hai. I`m in ya PC. Makin ya XSS viruzz! KThxBye");
+  </script></script>
+sanitized_html: |-
+  alert(&#8220;Hai. I`m in ya PC. Makin ya <span class="caps">XSS</span> viruzz! KThxBye&#8221;);
