Fix problems that occur when tags are left unclosed.

--- a/test/code.yml
+++ b/test/code.yml
@@ -87,6 +87,21 @@ in: |-
 html: |-
   # *test*
 ---
+name: unfinished notextile tag
+in: |-
+  <notextile>
+  # *test*
+html: |-
+  # *test*
+---
+name: unfinished script tag
+in: |-
+  <script>
+  function main(){}
+html: |-
+  <script>
+  function main(){}
+---
 name: inline notextile tags
 in: 'This is how you make a link: <notextile>"link":http://www.redcloth.org</notextile>'
 html: '<p>This is how you make a link: "link":http://www.redcloth.org</p>'
