Strip carriage returns and deal only with linefeeds
Carriage returns before linefeeds are a problem.  The easiest solution is to strip them out before parsing. RedCloth 3 doesn't preserve them either, so it must be okay with users.  Plus, it makes the output more predictable and standardized.
[#11 state:resolved]
[#14 state:resolved]

--- a/test/table.yml
+++ b/test/table.yml
@@ -244,3 +244,24 @@ html: |-
   		<td> 4 </td>
   	</tr>
   </table>
+---
+name: two adjacent tables
+in: |-
+  |a|b|c|
+  
+  |1|2|3|
+html: |-
+  <table>
+  	<tr>
+  		<td>a</td>
+  		<td>b</td>
+  		<td>c</td>
+  	</tr>
+  </table>
+  <table>
+  	<tr>
+  		<td>1</td>
+  		<td>2</td>
+  		<td>3</td>
+  	</tr>
+  </table>
