--- a/test/code.yml
+++ b/test/code.yml
@@ -86,6 +86,7 @@ in: |-
   </notextile>
 html: |-
   # *test*
+valid_html: false
 ---
 name: unfinished notextile tag
 in: |-
@@ -93,6 +94,7 @@ in: |-
   # *test*
 html: |-
   # *test*
+valid_html: false
 ---
 name: unfinished script tag
 in: |-
@@ -101,6 +103,7 @@ in: |-
 html: |-
   <script>
   function main(){}
+valid_html: false
 ---
 name: inline notextile tags
 in: 'This is how you make a link: <notextile>"link":http://www.redcloth.org</notextile>'
@@ -180,10 +183,12 @@ latex: "\ldots{} \sfrac{1}{2}\n\n"
 name: unclosed pre tag
 in: '<pre><code>This is a pre that will go unfinished'
 html: '<pre><code>This is a pre that will go unfinished'
+valid_html: false
 ---
 name: unclosed code tag
 in: 'This is a some <code>code that will go unfinished'
 html: '<p>This is a some <code>code that will go unfinished</p>'
+valid_html: false
 ---
 name: code containing parentheses
 in: 'p. @some_method(some_params, some => test);@ Oh dear this fails'
