--- a/test/code.yml
+++ b/test/code.yml
@@ -17,6 +17,10 @@ name: inlne code escapement describing textile paragraph styling
 in: 'This paragraph is aligned left but if you add this: @p>.@ to the beginning it will be aligned right.'
 html: '<p>This paragraph is aligned left but if you add this: <code>p&gt;.</code> to the beginning it will be aligned right.</p>'
 ---
+name: escapes code snippet containing html tag
+in: 'At the top of each page, please put @<h2>Title</h2>@ in the HTML.'
+html: '<p>At the top of each page, please put <code>&lt;h2&gt;Title&lt;/h2&gt;</code> in the <span class="caps">HTML</span>.</p>'
+---
 name: escaping in blockcode
 in: 'bc. This is within a block of code, so < and > should be entities.  You can talk about a <p class="foo"> tag if you wish and it will be properly escaped.'
 html: '<pre><code>This is within a block of code, so &lt; and &gt; should be entities.  You can talk about a &lt;p class="foo"&gt; tag if you wish and it will be properly escaped.</code></pre>'
@@ -163,6 +167,10 @@ html: |-
   <pre><code>This is an extended bc.</code>
   
   <code>I saw a ship. It ate my elephant.</code></pre>
+---
+name: block containing html tags
+in: bc. Can I talk about <h2>Headings</h2> here?
+html: '<pre><code>Can I talk about &lt;h2&gt;Headings&lt;/h2&gt; here?</code></pre>'
 ---
 name: escape latex standard symbols 
 in: "standard symbols # $ % & _ { }" 
